@@ -1,5 +1,6 @@
 2011-03-31:
- - Lexer fixes to parse ${_a}
+ - #47: Lexer fixes to parse ${_a}
+ - #46: Default value with parentheses not parsed correctly
 
 2011-03-29:
  - Find usages enabled on function definitions
